--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,19 +12,41 @@ slf4j = "2.0.17"
 
 [libraries]
 kotlinGradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
+
 ktorClientCore = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
+ktorClientCIO = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
+ktorClientJSON = { module = "io.ktor:ktor-client-json", version.ref = "ktor" }
+ktorClientSerialization = { module = "io.ktor:ktor-client-serialization", version.ref = "ktor" }
+ktorClientContentNegotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
+ktorSerializationKotlinxJSON = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
+
 kotlinxDatetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDatetime" }
 kotlinxSerializationJSON = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
 kotlinxSerializationProtobuf = { module = "org.jetbrains.kotlinx:kotlinx-serialization-protobuf", version.ref = "kotlinxSerialization" }
 kotlinxCoroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
+
 slf4jApi = { module = "org.slf4j:slf4j-api", version.ref = "slf4j" }
 slf4jSimple = { module = "org.slf4j:slf4j-simple", version.ref = "slf4j" }
 
 # Libraries can be bundled together for easier import
 [bundles]
-ktorEcosystem = ["ktorClientCore"]
-kotlinxEcosystem = ["kotlinxDatetime", "kotlinxSerializationJSON", "kotlinxCoroutines"]
-slf4j = ["slf4jApi", "slf4jSimple"]
+ktorEcosystem = [
+    "ktorClientCore",
+    "ktorClientCIO",
+    "ktorClientJSON",
+    "ktorClientSerialization",
+    "ktorClientContentNegotiation",
+    "ktorSerializationKotlinxJSON",
+]
+kotlinxEcosystem = [
+    "kotlinxDatetime",
+    "kotlinxSerializationJSON",
+    "kotlinxCoroutines"
+]
+slf4j = [
+    "slf4jApi",
+    "slf4jSimple"
+]
 
 [plugins]
 kotlinPluginSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
